--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ panic-probe = { version = "0.3", features = ["print-defmt"] }
 rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
 rp2040-boot2 = "0.3"
 critical-section = "1.0.0"
+embedded-graphics = "0.8.1"
+tinybmp = "0.6.0"
+st7735-lcd = "=0.9.0"
 
 # cargo build/run
 [profile.dev]
