画像変更と描画対応

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
                 "rust-lang.rust-analyzer",
                 "probe-rs.probe-rs-debugger",
                 "tamasfe.even-better-toml",
-                "fill-labs.dependi"
+                "fill-labs.dependi",
+                "oderwat.indent-rainbow"
             ]
         }
     }
